re-design Pre.jsx component

--- a/src/fonts/typography.css
+++ b/src/fonts/typography.css
@@ -1,4 +1,14 @@
 @font-face {
-  font-family: "FiraCode Regular";
+  font-family: "FiraCode-Regular";
   src: url("./FiraCode-Regular.otf");
+}
+
+@font-face {
+  font-family: "Segoe-Regular";
+  src: url("./Segoe-Regular.ttf");
+}
+
+@font-face {
+  font-family: "Segoe-Italic";
+  src: url("./Segoe-Italic.ttf");
 }
